crates/aiken-lang/src/parser/definition/snapshots/fallback.snap
---
source: crates/aiken-lang/src/parser/definition/validator.rs
description: "Code:\n\nvalidator thing {\n  spend (datum, rdmr, ctx) {\n    True\n  }\n\n  mint (rdmr, ctx) {\n    True\n  }\n\n  else (_) {\n    fail\n  }\n}\n"
---
Validator(
    Validator {
        doc: None,
        end_position: 122,
        handlers: [
            Function {
                arguments: [
                    UntypedArg {
                        by: ByName(
                            Named {
                                name: "datum",
                                label: "datum",
                                location: 27..32,
                            },
                        ),
                        location: 27..32,
                        annotation: None,
                        doc: None,
                        is_validator_param: false,
                    },
                    UntypedArg {
                        by: ByName(
                            Named {
                                name: "rdmr",
                                label: "rdmr",
                                location: 34..38,
                            },
                        ),
                        location: 34..38,
                        annotation: None,
                        doc: None,
                        is_validator_param: false,
                    },
                    UntypedArg {
                        by: ByName(
                            Named {
                                name: "ctx",
                                label: "ctx",
                                location: 40..43,
                            },
                        ),
                        location: 40..43,
                        annotation: None,
                        doc: None,
                        is_validator_param: false,
                    },
                ],
                body: Var {
                    location: 51..55,
                    name: "True",
                },
                doc: None,
                location: 26..44,
                name: "spend",
                public: true,
                return_annotation: None,
                return_type: (),
                end_position: 58,
                on_test_failure: FailImmediately,
            },
            Function {
                arguments: [
                    UntypedArg {
                        by: ByName(
                            Named {
                                name: "rdmr",
                                label: "rdmr",
                                location: 69..73,
                            },
                        ),
                        location: 69..73,
                        annotation: None,
                        doc: None,
                        is_validator_param: false,
                    },
                    UntypedArg {
                        by: ByName(
                            Named {
                                name: "ctx",
                                label: "ctx",
                                location: 75..78,
                            },
                        ),
                        location: 75..78,
                        annotation: None,
                        doc: None,
                        is_validator_param: false,
                    },
                ],
                body: Var {
                    location: 86..90,
                    name: "True",
                },
                doc: None,
                location: 68..79,
                name: "mint",
                public: true,
                return_annotation: None,
                return_type: (),
                end_position: 93,
                on_test_failure: FailImmediately,
            },
        ],
        location: 0..9,
        name: "thing",
        params: [],
        fallback: Function {
            arguments: [
                UntypedArg {
                    by: ByName(
                        Discarded {
                            name: "_",
                            label: "_",
                            location: 104..105,
                        },
                    ),
                    location: 104..105,
                    annotation: None,
                    doc: None,
                    is_validator_param: false,
                },
            ],
            body: ErrorTerm {
                location: 113..117,
            },
            doc: None,
            location: 103..106,
            name: "else",
            public: true,
            return_annotation: None,
            return_type: (),
            end_position: 120,
            on_test_failure: FailImmediately,
        },
    },
)
