crates/aiken-lang/src/parser/definition/snapshots/function_empty.snap
---
source: crates/aiken-lang/src/parser/definition/function.rs
description: "Code:\n\npub fn run() {}\n"
---
Fn(
    Function {
        arguments: [],
        body: Trace {
            kind: Todo,
            location: 0..15,
            then: ErrorTerm {
                location: 0..15,
            },
            text: String {
                location: 0..15,
                value: "aiken::todo",
            },
        },
        doc: None,
        location: 0..12,
        name: "run",
        public: true,
        return_annotation: None,
        return_type: (),
        end_position: 14,
        can_error: true,
    },
)
