crates/aiken-lang/src/parser/definition/snapshots/g2_element_constant.snap
---
source: crates/aiken-lang/src/parser/definition/constant.rs
description: "Code:\n\npub const point =\n  #<Bls12_381, G2>\"b0629fa1158c2d23a10413fe91d381a84d25e31d041cd0377d25828498fd02011b35893938ced97535395e4815201e67108bcd4665e0db25d602d76fa791fab706c54abf5e1a9e44b4ac1e6badf3d2ac0328f5e30be341677c8bac5dda7682f1\"\n"
---
ModuleConstant(
    ModuleConstant {
        doc: None,
        location: 0..230,
        public: true,
        name: "point",
        annotation: None,
        value: CurvePoint {
            location: 20..230,
            point: Bls12_381(
                G2(
                    blst_p2 {
                        x: blst_fp2 {
                            fp: [
                                blst_fp {
                                    l: [
                                        17730081354175209597,
                                        14393386882433024580,
                                        15392237588654399813,
                                        13132804324748058634,
                                        437180824693959563,
                                        1209861931331675905,
                                    ],
                                },
                                blst_fp {
                                    l: [
                                        16640134302799489459,
                                        13200372101402265278,
                                        3491868243815184488,
                                        15749231165976205625,
                                        10700844509881097270,
                                        978652262052845623,
                                    ],
                                },
                            ],
                        },
                        y: blst_fp2 {
                            fp: [
                                blst_fp {
                                    l: [
                                        15138882304466955413,
                                        4159460337006967255,
                                        16059739792181277381,
                                        4673287545394659101,
                                        6265740687822174786,
                                        1492317236631555918,
                                    ],
                                },
                                blst_fp {
                                    l: [
                                        7482650483077279660,
                                        1528034342759119680,
                                        1732030343867801117,
                                        8394128533480400141,
                                        6497663211870147931,
                                        683724859415636652,
                                    ],
                                },
                            ],
                        },
                        z: blst_fp2 {
                            fp: [
                                blst_fp {
                                    l: [
                                        8505329371266088957,
                                        17002214543764226050,
                                        6865905132761471162,
                                        8632934651105793861,
                                        6631298214892334189,
                                        1582556514881692819,
                                    ],
                                },
                                blst_fp {
                                    l: [
                                        0,
                                        0,
                                        0,
                                        0,
                                        0,
                                        0,
                                    ],
                                },
                            ],
                        },
                    },
                ),
            ),
            preferred_format: HexadecimalString,
        },
        tipo: (),
    },
)
