crates/aiken-lang/src/parser/definition/snapshots/import_alias.snap
---
source: crates/aiken-lang/src/parser/definition/import.rs
description: "Code:\n\nuse aiken/list as foo"
---
Use {
    as_name: Some(
        "foo",
    ),
    location: 0..21,
    module: [
        "aiken",
        "list",
    ],
    package: (),
    unqualified: (
        14,
        [],
    ),
}
