crates/aiken-lang/src/parser/definition/snapshots/import_basic.snap
---
source: crates/aiken-lang/src/parser/definition/import.rs
description: "Code:\n\nuse aiken/list"
---
Use {
    as_name: None,
    location: 0..14,
    module: [
        "aiken",
        "list",
    ],
    package: (),
    unqualified: (
        14,
        [],
    ),
}
